Table films {
  id integer [pk]
  name varchar(255) [not null]
  description text
  release_date date [not null]
  duration integer [not null]
  mpa_rating_id integer [not null]
  
  indexes {
    mpa_rating_id [name: 'idx_films_mpa_rating']
  }
}

Table users {
  id integer [pk]
  login varchar(100) [not null, unique]
  email varchar(255) [not null, unique]
  name varchar(100) [not null]
  birthday date
  
  indexes {
    login [name: 'idx_users_login']
    email [name: 'idx_users_email']
  }
}

Table mpa_ratings {
  id integer [pk]
  name varchar(50) [not null, unique]
  description varchar(255)
}

Table genres {
  id integer [pk]
  name varchar(100) [not null, unique]
}

Table film_genres {
  film_id integer [not null]
  genre_id integer [not null]
  
  indexes {
    (film_id, genre_id) [pk, name: 'pk_film_genres']
  }
}

Table likes {
  film_id integer [not null]
  user_id integer [not null]
  created_at timestamp [not null, default: `now()`]
  
  indexes {
    (film_id, user_id) [pk, name: 'pk_likes']
  }
}

Table friend_requests {
  user_id integer [not null]
  friend_id integer [not null]
  created_at timestamp [not null, default: `now()`]
  
  indexes {
    (user_id, friend_id) [pk, name: 'pk_friends']
  }
}

Ref: films.mpa_rating_id > mpa_ratings.id

Ref: likes.film_id > films.id
Ref: likes.user_id > users.id

Ref: film_genres.film_id > films.id
Ref: film_genres.genre_id > genres.id

Ref: friend_requests.user_id > users.id
Ref: friend_requests.friend_id > users.id